--- a/pom.xml
+++ b/pom.xml
@@ -19,19 +19,22 @@
 
   <properties>
     <dwc-api.version>1.13</dwc-api.version>
-    <dwca-io.version>1.26</dwca-io.version>
-    <gbif-cli.version>0.10</gbif-cli.version>
+    <dwca-io.version>1.27-SNAPSHOT</dwca-io.version>
     <gbif-common.version>0.26</gbif-common.version>
     <gbif-api.version>0.38</gbif-api.version>
     <checklistbank.version>2.39</checklistbank.version>
+    <name-parser.version>2.17</name-parser.version>
 
     <commons-lang3.version>3.4</commons-lang3.version>
     <guava.version>19.0</guava.version>
     <guice.version>4.0</guice.version>
-    <jcommander.version>1.48</jcommander.version>
+    <jackson.version>4.0</jackson.version>
     <junit.version>4.12</junit.version>
     <logback.version>1.1.3</logback.version>
     <slf4j.version>1.7.12</slf4j.version>
+    <httpclient.version>4.3.6</httpclient.version>
+    <httpcore.version>4.3.3</httpcore.version>
+    <jackson.version>1.9.13</jackson.version>
   </properties>
 
   <build>
@@ -64,9 +67,9 @@
   <dependencies>
     <!-- GBIF -->
     <dependency>
-      <groupId>org.gbif.common</groupId>
-      <artifactId>gbif-cli</artifactId>
-      <version>${gbif-cli.version}</version>
+      <groupId>org.gbif</groupId>
+      <artifactId>name-parser</artifactId>
+      <version>${name-parser.version}</version>
     </dependency>
     <dependency>
       <groupId>org.gbif</groupId>
@@ -96,10 +99,32 @@
 
     <!-- other -->
     <dependency>
-      <groupId>com.beust</groupId>
-      <artifactId>jcommander</artifactId>
-      <version>${jcommander.version}</version>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>${httpclient.version}</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>commons-logging</artifactId>
+          <groupId>commons-logging</groupId>
+        </exclusion>
+      </exclusions>
     </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpcore</artifactId>
+      <version>${httpcore.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-mapper-asl</artifactId>
+      <version>${jackson.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-jaxrs</artifactId>
+      <version>${jackson.version}</version>
+    </dependency>
+
 
     <!-- Guice -->
     <dependency>
